tests/compError/aliasDoesNotExist.ucl
// compError
// error: alias 'nonExistentAlias' does not exist
// tests/compError/aliasDoesNotExist.ucl:5 -> here

nonExistentAlias